// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vite-plugin-shopify-section-schema > can output a schema with a single module 1`] = `
"<h1>section.liquid</h1>

{% schema %}
{
  \\"name\\": \\"vite-plugin-shopify-section-schema\\",
  \\"tests\\": [
    \\"with-single-module\\"
  ]
}
{% endschema %}
"
`;

exports[`vite-plugin-shopify-section-schema > can output a schema with modules 1`] = `
"<h1>section.liquid</h1>

{% schema %}
{
  \\"name\\": \\"vite-plugin-shopify-section-schema\\",
  \\"tests\\": [
    \\"with-modules\\"
  ]
}
{% endschema %}
"
`;
